# sgi_demos

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/atlantis/: CMakeLists.txt  atlantis.c  atlantis.h  dolphin.c  shark.c  swim.c  whale.c
src/ideas/: CMakeLists.txt  a.c  b.c  d.c  draw_holder.c  draw_lamp.c  draw_logo.c  draw_logo_line.c  draw_logo_shadow.c  e.c  f.c  h.c  i.c  m.c  n.c  o.c  objects.h  p.c  r.c  s.c  t.c  track.c  w.c
src/time_utils/: CMakeLists.txt  time_frame.c  time_frame.h
src/yacme/: CMakeLists.txt  Editor.c  invertmat.c  mallocbis.h
